# platform-prng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cicd/: build.sh  parallel_run.sh  parallel_stop.sh  run  test.sh
contracts/: CMakeLists.txt
contracts/include/prng/: prng.hpp
contracts/src/: prng.cpp
test/: CMakeLists.txt  contracts.hpp.in  prng_test.cpp
validator/: main  main.cpp
